tests/rosetta/out/Haskell/canny-edge-detector.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/canny-edge-detector.hs:163:1: error:
    Not in scope: data constructor ‘PI’
    |
163 | PI = 3.141592653589793
    | ^^

/workspace/mochi/tests/rosetta/out/Haskell/canny-edge-detector.hs:166:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/canny-edge-detector.hs:155:1
                 /workspace/mochi/tests/rosetta/out/Haskell/canny-edge-detector.hs:166:1
    |
166 | main = do
    | ^^^^
